<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="16dp"
    tools:context="com.example.maxxrodriguez.test.CreateDoctorUI"
    android:id="@+id/createDoctorUI"
    android:focusable="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/FnLtext"
        android:textColor="#ff737373"
        android:layout_marginTop="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/dob"
        android:ems="10"
        android:id="@+id/dobText"
        android:textColor="#ff737373"
        android:singleLine="false"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/FnLtext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_information"
        android:id="@+id/textView"
        android:textColor="#ff000000"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/emailText"
        android:textColor="#ff737373"
        android:singleLine="false"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dobText"
        android:layout_alignRight="@+id/dobText"
        android:layout_alignEnd="@+id/dobText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/passwordText"
        android:textColor="#ff737373"
        android:singleLine="false"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/emailText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/emailText"
        android:layout_alignEnd="@+id/emailText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hospital_name"
        android:ems="10"
        android:id="@+id/hospitalText"
        android:textColor="#ff737373"
        android:singleLine="false"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/passwordText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@id/passwordText"
        android:layout_alignEnd="@id/passwordText"/>
    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:id="@+id/button"
        android:onClick="createDoctor"
        android:textColor="#ffffffff"
        android:background="@color/Doctor_base"
        android:layout_below="@+id/passwordText"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText"
        android:layout_marginTop="67dp" />



</RelativeLayout>
